# runn-cli

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  runncli.py
lib/: __init__.py  client.py  logger.py  models.py  utils.py
lib/commands/: add_assignment.py  delete_assignment.py  list_actuals.py  list_assignments.py  list_people.py  list_projects.py  set_actuals.py  set_actuals_to_assigned.py
personal/: README.md
